Added section Operator, corrected IP 0.0.0.0

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -2,26 +2,25 @@
 $body-frame: 0;
 
 //colors of the project
-$color-white: #F4F4F4;
+$color-white: #f4f4f4;
 $color-black: rgba(22, 22, 22, 1);
 
 $color-grey-light: rgba(126, 126, 126, 1);
 $color-grey-dark: rgba(48, 48, 48, 1);
 
-$color-blue1-dark: #1C50BA;
-$color-blue1-light: #266DFF;
+$color-blue1-dark: #1c50ba;
+$color-blue1-light: #266dff;
 
-$color-blue2-dark:#00A2FF;
-$color-blue2-light:#01C0F4;
+$color-blue2-dark: #00a2ff;
+$color-blue2-light: #01c0f4;
 
 //FONTS OF THE PROJECT
 $default-font-size: 1.6rem;
 
-
-//GRID DIMENSIONS 
+//GRID DIMENSIONS
 $grid-width: 150rem;
 $grid-gutter-vertical: 8rem;
-$grid-gutter-horizontal: 5rem; 
+$grid-gutter-horizontal: 5rem;
 
 //NAVBAR
-$navbar-height: 10rem;
+$navbar-height: 8rem;
