--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,6 +6,8 @@
 @import "./base/utilities";
 
 @import "./components/navbar";
+@import "./components/usernav";
 @import "./components/forms";
-@import "./pages/home";
+@import "./pages/supervisor";
+@import "./pages/operator";
 @import "./pages/login";
