--- a/src/sass/components/_navbar.scss
+++ b/src/sass/components/_navbar.scss
@@ -3,11 +3,14 @@
   left: 0;
   width: 100vw;
   height: $navbar-height;
-  padding: 1rem 0;
+  padding: 1rem 10rem;
   background-color: rgba($color-white, 1);
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+  border-bottom-color: rgba($color-black, 0.4);
 
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 
   z-index: 100;
@@ -23,34 +26,22 @@
     height: 100%;
     width: auto;
   }
-  &__logobox2 {
-    height: 100%;
-    width: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    justify-self: center;
-  }
-  &__logo2 {
-    height: 40%;
-    width: auto;
-  }
+
   &__menu {
     height: 100%;
-    width: 33.33%;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     list-style: none;
   }
   &__link {
-    width: 15rem;
+    width: 12rem;
     height: 60%;
     border-radius: 3rem;
-    color: $color-black;
-    font-size: 1rem;
+    color: rgba($color-black, 0.8);
+    font-size: 1.5rem;
     font-weight: 700;
-    letter-spacing: 0.5rem;
+    letter-spacing: 0.3rem;
     text-decoration: none;
 
     display: flex;
