--- a/src/style.css
+++ b/src/style.css
@@ -29,7 +29,7 @@ html {
 body {
   box-sizing: border-box;
   overflow-x: hidden;
-  background-color: #F4F4F4;
+  background-color: #f4f4f4;
   font-family: "Roboto", sans-serif;
 }
 
@@ -115,11 +115,14 @@ body {
   top: 0;
   left: 0;
   width: 100vw;
-  height: 10rem;
-  padding: 1rem 0;
+  height: 8rem;
+  padding: 1rem 10rem;
   background-color: #f4f4f4;
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+  border-bottom-color: rgba(22, 22, 22, 0.4);
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   z-index: 100;
 }
@@ -134,34 +137,21 @@ body {
   height: 100%;
   width: auto;
 }
-.navbar__logobox2 {
-  height: 100%;
-  width: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  justify-self: center;
-}
-.navbar__logo2 {
-  height: 40%;
-  width: auto;
-}
 .navbar__menu {
   height: 100%;
-  width: 33.33%;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   list-style: none;
 }
 .navbar__link {
-  width: 15rem;
+  width: 12rem;
   height: 60%;
   border-radius: 3rem;
-  color: #161616;
-  font-size: 1rem;
+  color: rgba(22, 22, 22, 0.8);
+  font-size: 1.5rem;
   font-weight: 700;
-  letter-spacing: 0.5rem;
+  letter-spacing: 0.3rem;
   text-decoration: none;
   display: flex;
   justify-content: center;
@@ -175,13 +165,20 @@ body {
   margin-right: 1rem;
 }
 
+.usernav {
+  width: 100vw;
+  height: 4rem;
+  padding: 0.8rem 2rem;
+  background-color: #01c0f4;
+}
+
 .container {
   width: 100vw;
-  padding-top: 2rem;
+  height: calc(100vh - 8rem);
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
-  justify-content: flex-start;
 }
 
 .reportContainer {
@@ -195,12 +192,14 @@ body {
 
 .form {
   width: 70%;
+  height: auto;
   display: flex;
   border-radius: 10px;
   padding: 2rem;
   padding-bottom: 4rem;
-  background-color: #01C0F4;
+  background-color: #01c0f4;
   box-shadow: 0 1rem 2rem rgba(22, 22, 22, 0.4);
+  transform: translateY(-4rem);
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -208,7 +207,7 @@ body {
 .form__title {
   font-size: 3rem;
   margin-bottom: 5rem;
-  color: #F4F4F4;
+  color: #f4f4f4;
 }
 .form__group {
   width: 80%;
@@ -221,7 +220,7 @@ body {
 .form__label {
   font-size: 1.6rem;
   font-weight: 400;
-  color: #F4F4F4;
+  color: #f4f4f4;
 }
 .form__input {
   width: 100%;
@@ -232,12 +231,12 @@ body {
   padding: 1rem;
   border-style: solid;
   border-width: 2px;
-  border-color: #01C0F4;
+  border-color: #01c0f4;
 }
 .form__input:focus {
   background-color: rgba(28, 80, 186, 0.2);
   border-style: solid;
-  border-color: #F4F4F4;
+  border-color: #f4f4f4;
   outline: none !important;
 }
 .form__button {
@@ -246,25 +245,22 @@ body {
   border-radius: 8px;
   height: 4rem;
   font-size: 1.8rem;
-  background-color: #01C0F4;
-  color: #F4F4F4;
-  border-color: #F4F4F4;
+  background-color: #01c0f4;
+  color: #f4f4f4;
+  border-color: #f4f4f4;
   margin-top: 2rem;
 }
 .form__button:hover {
-  background-color: #F4F4F4;
-  color: #01C0F4;
-  border-color: #01C0F4;
+  background-color: #f4f4f4;
+  color: #01c0f4;
+  border-color: #01c0f4;
 }
 
 .success,
 .error {
-  position: absolute;
-  top: 3rem;
-  right: 3rem;
   height: 5rem;
   font-size: 2rem;
-  color: #F4F4F4;
+  color: #f4f4f4;
   border-radius: 5px;
   padding: 1rem 2rem;
 }
@@ -273,20 +269,17 @@ body {
   background-color: green;
 }
 
+.error {
+  background-color: red;
+}
+
 .success_report {
-  position: absolute;
-  top: 3rem;
-  right: 3rem;
   height: 5rem;
   font-size: 2rem;
-  color: #F4F4F4;
+  color: #f4f4f4;
   border-radius: 5px;
   padding: 1rem 2rem;
   background-color: green;
-}
-
-.error {
-  background-color: red;
 }
 
 .reportform {
@@ -314,7 +307,7 @@ body {
 .reportform__user {
   font-size: 1.6rem;
   align-self: flex-start;
-  color: #01C0F4;
+  color: #01c0f4;
   margin-bottom: 2rem;
 }
 .reportform__group {
@@ -344,12 +337,12 @@ body {
   padding: 0.6rem;
   border-style: solid;
   border-width: 1px;
-  border-color: #01C0F4;
+  border-color: #01c0f4;
 }
 .reportform__input:focus {
   background-color: rgba(28, 80, 186, 0.2);
   border-style: solid;
-  border-color: #F4F4F4;
+  border-color: #f4f4f4;
   outline: none !important;
 }
 .reportform__comentarios {
@@ -360,7 +353,7 @@ body {
   font-size: 1.6rem;
   border-style: solid;
   border-width: 1px;
-  border-color: #01C0F4;
+  border-color: #01c0f4;
   padding: 1rem;
 }
 .reportform__button {
@@ -369,25 +362,25 @@ body {
   border-radius: 8px;
   height: 4rem;
   font-size: 1.8rem;
-  background-color: #01C0F4;
-  color: #F4F4F4;
-  border-color: #F4F4F4;
+  background-color: #01c0f4;
+  color: #f4f4f4;
+  border-color: #f4f4f4;
   margin-top: 2rem;
 }
 .reportform__button:hover {
-  background-color: #F4F4F4;
-  color: #01C0F4;
-  border-color: #01C0F4;
+  background-color: #f4f4f4;
+  color: #01c0f4;
+  border-color: #01c0f4;
 }
 
 .supervisor {
   width: 100vw;
-  height: calc(100vh - 10rem);
+  height: calc(100vh - 8rem);
   display: flex;
 }
 .supervisor__menu {
   width: 20%;
-  background-color: #01C0F4;
+  background-color: #01c0f4;
   border-radius: 5px;
   display: flex;
   flex-direction: column;
@@ -414,8 +407,21 @@ body {
   height: 100%;
 }
 
+.operator__title {
+  width: 100vw;
+  margin-top: 2rem;
+  font-size: 2rem;
+  border-bottom-style: solid;
+  border-bottom-width: 1.5px;
+  border-bottom-color: rgba(22, 22, 22, 0.6);
+  padding-left: 2rem;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
 .login {
-  margin-top: 10rem;
+  margin-top: 8rem;
 }
 
 /*# sourceMappingURL=style.css.map */
