--- a/src/sass/pages/_supervisor.scss
+++ b/src/sass/pages/_supervisor.scss
@@ -2,9 +2,10 @@
   width: 100vw;
   height: calc(100vh - #{$navbar-height});
   display: flex;
+  flex-direction: column;
 
   &__menu {
-    width: 20%;
+    width: 100vw;
     background-color: $color-blue2-light;
     border-radius: 5px;
 
@@ -14,7 +15,6 @@
     align-items: center;
 
     &__title {
-      margin-top: 3rem;
       font-size: 3rem;
     }
     &__link {
@@ -31,7 +31,7 @@
     }
   }
   &__mainZone {
-    width: 80%;
+    width: 100vw;
     height: 100%;
   }
 }
